--- a/event-object/keysolo/task.html
+++ b/event-object/keysolo/task.html
@@ -28,6 +28,9 @@
                     <p>
                         Неправильно введённых слов: <span class="status__loss">0</span>
                     </p>
+                    <p>
+                        Время на введённие слова: <span class="status__times">5</span>
+                    </p>
                 </div>
                 <div class="word">
                     <span class="symbol">К</span>
